Update line height on dropdowns to prevent some letters from getting cut off

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -580,6 +580,7 @@ button, a.button
     font-family: $secondary-font
     font-size: 14px
     height: 100%
+    line-height: 48px
     padding: 0 38px 0 12px
     position: relative
     width: 100%
